Edits from 2021-02-23 meeting

--- a/main.tex
+++ b/main.tex
@@ -81,6 +81,6 @@ $^{2}$Laboratory X, Institute X, Department X, Organization X, City X , State XX
 \input{tex/acknowledgements}
 
 \bibliographystyle{frontiersinSCNS_ENG_HUMS} 
-\bibliography{references}
+\bibliography{references,ferguson}
 
 \end{document}
