--- a/references.bib
+++ b/references.bib
@@ -792,6 +792,42 @@
 	file = {Dunn_et_al_2005_Two_cues_for_sex_determination_in_iGammarus_duebeni-i.pdf:/Users/amlalejini/Dropbox/Library/research-bibliography/Dunn_et_al_2005_Two_cues_for_sex_determination_in_iGammarus_duebeni-i.pdf:application/pdf}
 }
 
+@inproceedings{nahum_improved_2017,
+	address = {Lyon, France},
+	title = {Improved adaptation in exogenously and endogenously changing environments},
+	isbn = {978-0-262-34633-7},
+	url = {https://www.mitpressjournals.org/doi/abs/10.1162/isal_a_052},
+	doi = {10.7551/ecal_a_052},
+	language = {english},
+	urldate = {2019-08-18},
+	booktitle = {Proceedings of the 14th {European} {Conference} on {Artificial} {Life} {ECAL} 2017},
+	publisher = {MIT Press},
+	author = {Nahum, Joshua R. and West, Jevin and Althouse, Benjamin M. and Zaman, Luis and Ofria, Charles and Kerr, Benjamin},
+	month = sep,
+	year = {2017},
+	pages = {306--313}
+}
+
+
+@article{zaman_coevolution_2014,
+	title = {Coevolution {Drives} the {Emergence} of {Complex} {Traits} and {Promotes} {Evolvability}},
+	volume = {12},
+	issn = {1545-7885},
+	url = {https://dx.plos.org/10.1371/journal.pbio.1002023},
+	doi = {10.1371/journal.pbio.1002023},
+	language = {english},
+	number = {12},
+	urldate = {2019-07-26},
+	journal = {PLoS Biology},
+	author = {Zaman, Luis and Meyer, Justin R. and Devangam, Suhas and Bryson, David M. and Lenski, Richard E. and Ofria, Charles},
+	editor = {Keller, Laurent},
+	month = dec,
+	year = {2014},
+	pages = {e1002023}
+}
+
+
+
 
 
 
