--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -109,3 +109,5 @@ Indeed, we observed that the evolutionary dynamics of adaptively plastic populat
 We found that the evolution of adaptive phenotypic plasticity buffers populations against environmental fluctuations, whereas repeated selective sweeps in non-plastic populations drive the accumulation of deleterious genes and the loss of secondary beneficial traits via deleterious hitchhiking.
 As such, adaptively plastic populations were better able to retain novel traits than their non-plastic counterparts.
 [A sentence about how we hope this work inspires more use of digital evolution as an experimental tool/expand experimental repertoire of evolutionary biologists studying phenotypic plasticity?].
+
+% Our results suggest that adaptive phenotypic plasticity can improve the potential for populations exploit novel resources in cyclically changing environments.
