--- a/tex/methods.tex
+++ b/tex/methods.tex
@@ -235,7 +235,8 @@ We measured task discovery, task performance, and task loss along successful lin
 We limited these measures to the novel task set, excluding the six base tasks:
 
 \begin{itemize}
-    \item \textbf{Task discovery} measures a given lineage's level of \textit{exploration} of the fitness landscape [cite - Rose].
+
+\item \textbf{Task discovery} measures a given lineage's level of \textit{exploration} of the fitness landscape (i.e., the mapping between genetic space and phenotype space) \citep{canino-koning_fluctuating_2019}. 
 We calculated task discovery as the total number of unique tasks ever performed along the lineage, even if a task is later lost; as such, a lineage's task discovery measurement could range from 0 to 71.
 
 \item \textbf{Task performance} measures the level of \textit{exploitation} of the fitness landscape at a given point in time.
