--- a/tex/results.tex
+++ b/tex/results.tex
@@ -154,6 +154,10 @@ Next, we examined the frequency at which novel task loss along lineages co-occur
 Across all NON-PLASTIC dominant lineages, over 97\% (10998 out of 11229) of instances of novel task loss co-occurred with a simultaneous change in base task profile.
 In contrast, across all PLASTIC and STATIC dominant lineages, we observed that approximately 20\% (29 out of 142) and 2\% (13 out of 631), respectively, of instances of novel task loss co-occurred with a simultaneous change in base task profile. 
 
+% In supplemental experiments, we did find that the relative value of fluctuating and novel tasks affected novel task discovery and retention [cite supplement]. 
+% While the overall patterns that we observed were consistent, 
+% [Limitation (relative value): in supplemental experiments, relative value of fluctuating and novel tasks affects novel task retention, the stronger directional selection on fluctuation tasks relative to selection on novel tasks makes novel tasks harder to maintain because less deleterious to lose novel trait].
+
 \vspace{0.5cm}
 \subsection{Deleterious hitchhiking}
 
