--- a/tex/scratch.tex
+++ b/tex/scratch.tex
@@ -434,3 +434,19 @@ In this way, we can reward or punish particular phenotypic traits.
 % Indeed, we limited our analyses to phase two where populations were already adapted to their treatment conditions.
 
 % In our experiments, adaptive plasticity provided a mechanism for organisms to regulate task expression in response to environmental changes, which shielded plastic [populations/individuals] from strong directional selection when the environment changed and eliminated the need for a rapid evolutionary response to adjust task expression.
+
+
+% - our results -
+% Indeed, our experimental results show that non-plastic populations better explore the fitness landscape, discovering more novel tasks than plastic populations.
+%However, despite lower task discovery, plastic populations better exploited the fitness landscape at the end of the experiment, better retaining acquired novel tasks than non-plastic populations. 
+% However, despite lower task discovery, plastic populations better retained novel tasks, resulting in better exploitation of the fitness landscape compared to non-plastic populations.
+% The frequent selective sweeps in non-plastic populations driven by environmental fluctuations made it difficult for non-plastic populations to maintain novel traits.
+%Because when mutation that caused loss of a novel trait helped offspring adapt to fluctuations, loss hitchhikes to frequency because of relative value of base and novel traits; disproportionate co-occuring either because novel trait exapted or loss hitchhiked along with beneficial change in base traits.
+% If the mutation that caused the loss of a novel trait also helped the offspring adapt to the environmental fluctuations, the loss hitchhikes to frequency because of the relative values of base and novel tasks.
+% Such co-occurences were disproportionately observed in non-plastic populations [because/due to] [novel trait exapted or loss hitchhiked along with beneficial change in base traits].
+% [Limitation (relative value): in supplemental experiments, relative value of fluctuating and novel tasks affects novel task retention, the stronger directional selection on fluctuation tasks relative to selection on novel tasks makes novel tasks harder to maintain because less deleterious to lose novel trait].
+
+% Overall, we found that non-plastic populations evolving in a fluctuating environment better explored the fitness landscape (i.e., discovered more novel traits) than plastic populations evolving in a fluctuating environment.
+% Indeed, phenotypic plasticity stabilized populations against environmental fluctuations, allowing lineages to more easily retain novel adaptive traits.
+
+% Plastic populations relied on environmentally-induced phenotypic changes to adapt to environmental changes, whereas non-plastic populations engaged in adaptive evolutionary tracking \cite{simons_modes_2011}[other cite?]; that is, non-plastic populations relied on \textit{de novo} mutations to continuously re-adapt to environmental changes, driving more frequent selective sweeps.
